--- a/css/summary.css
+++ b/css/summary.css
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 #summary-content {
   display: flex;
   flex-direction: column;
@@ -148,7 +151,7 @@
   box-shadow: 0px 0px 4px 0px #00000029;
   transition: all 225ms ease-in-out;
   aspect-ratio: 1;
-  width: 100%;
+  /* width: 100%; */
   height: auto;
   box-sizing: border-box;
 }
